base/solution02/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solution02
  namespace: tenant-example
  labels:
    app: solution02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solution02
  template:
    metadata:
      labels:
        app: solution02
    spec:
      containers:
      - name: solution02
        image: 183070076065.dkr.ecr.us-east-1.amazonaws.com/example-repo:main-0
