base/solution02/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: solution02-service
  namespace: tenant-example
  labels:
    app: solution02
spec:
 selector:
   app: solution02
 type: ClusterIP  
 ports:
  - protocol: TCP
    port: 9091
    targetPort: 9091
